[package]
name = "ascii_tree"
version = "0.1.1"
authors = ["d.maetzke@bpressure.net"]
include = [".gitignore", "Cargo.toml", "src/*.rs", "README.md"]
description = "generates ascii trees"
keywords = ["ascii", "tree" ]
license = "MIT"
repository = "https://github.com/bpressure/ascii_tree"

[dependencies]
